<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="com.walletkeep.walletkeep.ui.IntroSlider">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/introSlider_activity_constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ecf0f1"
        android:fitsSystemWindows="true">

        <!--<FrameLayout-->
        <!--android:id="@+id/fullscreen_content_controls"-->
        <!--style="?metaButtonBarStyle"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="@color/black_overlay"-->
        <!--android:orientation="horizontal"-->
        <!--tools:ignore="UselessParent">-->

        <!--</FrameLayout>-->

        <ViewFlipper
            android:id="@+id/introSlider_activity_viewFlipper"
            android:layout_width="match_parent"
            android:layout_height="545dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <RelativeLayout
                style="?metaButtonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/introSlider_activity_textView_screen3"
                    android:layout_width="wrap_content"
                    android:layout_height="233dp"
                    android:layout_marginBottom="32dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/Splash3"
                    android:textAppearance="@android:style/TextAppearance.Material.Title"
                    android:textColor="#000000"
                    android:textSize="30sp" />

                <ImageView
                    android:id="@+id/introSlider_activity_imageView_screen3"
                    android:layout_width="382dp"
                    android:layout_height="172dp"
                    android:layout_below="@id/introSlider_activity_textView_screen3"
                    android:layout_marginBottom="40dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    app:srcCompat="@drawable/ethlock" />

            </RelativeLayout>

            <RelativeLayout
                style="?metaButtonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/introSlider_activity_textView_screen1"
                    android:layout_width="wrap_content"
                    android:layout_height="233dp"
                    android:layout_marginBottom="32dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/Splash1"
                    android:textAppearance="@android:style/TextAppearance.Material.Title"
                    android:textColor="#000000"
                    android:textSize="33sp" />

                <ImageView
                    android:id="@+id/introSlider_activity_imageView_screen1"
                    android:layout_width="382dp"
                    android:layout_height="172dp"
                    android:layout_below="@id/introSlider_activity_textView_screen1"
                    android:layout_marginBottom="40dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    app:srcCompat="@drawable/titlecoins" />

            </RelativeLayout>

            <RelativeLayout
                style="?metaButtonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/introSlider_activity_textView_screen2"
                    android:layout_width="wrap_content"
                    android:layout_height="233dp"
                    android:layout_marginBottom="32dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/Splash2"
                    android:textAppearance="@android:style/TextAppearance.Material.Title"
                    android:textColor="#000000"
                    android:textSize="25sp" />

                <ImageView
                    android:id="@+id/introSlider_activity_imageView_screen2"
                    android:layout_width="382dp"
                    android:layout_height="172dp"
                    android:layout_below="@id/introSlider_activity_textView_screen2"
                    android:layout_marginBottom="40dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    app:srcCompat="@drawable/automationgears" />

            </RelativeLayout>

        </ViewFlipper>

        <Button
            android:id="@+id/introSlider_activity_button_next"
            style="@style/ButtonGeneral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </android.support.constraint.ConstraintLayout>

</FrameLayout>
